; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_ui_basic.c_FilenamesSort.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_ui_basic.c_FilenamesSort.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8**, i8**)* @FilenamesSort to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @FilenamesSort(i8** %0, i8** %1) #0 {
  %3 = alloca i8**, align 8
  %4 = alloca i8**, align 8
  %5 = alloca i8**, align 8
  %6 = alloca i8**, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  store i8** %0, i8*** %3, align 8
  store i8** %1, i8*** %4, align 8
  br label %9

9:                                                ; preds = %44, %2
  %10 = load i8**, i8*** %3, align 8
  %11 = getelementptr inbounds i8*, i8** %10, i64 1
  %12 = load i8**, i8*** %4, align 8
  %13 = icmp ult i8** %11, %12
  br i1 %13, label %14, label %57

14:                                               ; preds = %9
  %15 = load i8**, i8*** %3, align 8
  %16 = getelementptr inbounds i8*, i8** %15, i64 1
  store i8** %16, i8*** %5, align 8
  %17 = load i8**, i8*** %4, align 8
  store i8** %17, i8*** %6, align 8
  %18 = load i8**, i8*** %3, align 8
  %19 = load i8*, i8** %18, align 8
  store i8* %19, i8** %7, align 8
  br label %20

20:                                               ; preds = %43, %14
  %21 = load i8**, i8*** %5, align 8
  %22 = load i8**, i8*** %6, align 8
  %23 = icmp ult i8** %21, %22
  br i1 %23, label %24, label %44

24:                                               ; preds = %20
  %25 = load i8**, i8*** %5, align 8
  %26 = load i8*, i8** %25, align 8
  %27 = load i8*, i8** %7, align 8
  %28 = call i64 @FilenamesCmp(i8* %26, i8* %27)
  %29 = icmp sle i64 %28, 0
  br i1 %29, label %30, label %33

30:                                               ; preds = %24
  %31 = load i8**, i8*** %5, align 8
  %32 = getelementptr inbounds i8*, i8** %31, i32 1
  store i8** %32, i8*** %5, align 8
  br label %43

33:                                               ; preds = %24
  %34 = load i8**, i8*** %6, align 8
  %35 = getelementptr inbounds i8*, i8** %34, i32 -1
  store i8** %35, i8*** %6, align 8
  %36 = load i8**, i8*** %5, align 8
  %37 = load i8*, i8** %36, align 8
  store i8* %37, i8** %8, align 8
  %38 = load i8**, i8*** %6, align 8
  %39 = load i8*, i8** %38, align 8
  %40 = load i8**, i8*** %5, align 8
  store i8* %39, i8** %40, align 8
  %41 = load i8*, i8** %8, align 8
  %42 = load i8**, i8*** %6, align 8
  store i8* %41, i8** %42, align 8
  br label %43

43:                                               ; preds = %33, %30
  br label %20

44:                                               ; preds = %20
  %45 = load i8**, i8*** %5, align 8
  %46 = getelementptr inbounds i8*, i8** %45, i32 -1
  store i8** %46, i8*** %5, align 8
  %47 = load i8**, i8*** %5, align 8
  %48 = load i8*, i8** %47, align 8
  store i8* %48, i8** %8, align 8
  %49 = load i8**, i8*** %3, align 8
  %50 = load i8*, i8** %49, align 8
  %51 = load i8**, i8*** %5, align 8
  store i8* %50, i8** %51, align 8
  %52 = load i8*, i8** %8, align 8
  %53 = load i8**, i8*** %3, align 8
  store i8* %52, i8** %53, align 8
  %54 = load i8**, i8*** %3, align 8
  %55 = load i8**, i8*** %5, align 8
  call void @FilenamesSort(i8** %54, i8** %55)
  %56 = load i8**, i8*** %6, align 8
  store i8** %56, i8*** %3, align 8
  br label %9

57:                                               ; preds = %9
  ret void
}

declare dso_local i64 @FilenamesCmp(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
